# machinelearning

./: README.md  pyproject.toml
src/fa/: __init__.py  __main__.py  fa.py  objectives.py  plotting.py
src/fa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
